[gd_scene load_steps=9 format=3 uid="uid://cwuvypqcgyiju"]

[ext_resource type="Script" path="res://GDScript/level_selection.gd" id="1_f1lxc"]
[ext_resource type="Texture2D" uid="uid://6bef8dxqxnnt" path="res://Assets/BGMenu/LevelBG1.jpg" id="1_lurgr"]
[ext_resource type="FontFile" uid="uid://dqtkhlcv16x37" path="res://Fonts/HIROMISAKE.ttf" id="2_81afr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vyp7g"]
texture = ExtResource("1_lurgr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mo7wi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mq0iq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ewv1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqkv6"]

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1lxc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vyp7g")

[node name="Control" type="Control" parent="Panel"]
layout_mode = 1
anchor_left = 0.213
anchor_top = 0.273
anchor_right = 0.792
anchor_bottom = 0.699
offset_left = -0.376022
offset_top = 0.095993
offset_right = -0.384033
offset_bottom = 0.0479736
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -387.5
offset_top = -62.0
offset_right = 397.5
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 100
columns = 4

[node name="Level-1" type="Button" parent="Panel/Control/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_81afr")
theme_override_font_sizes/font_size = 40
text = "1"

[node name="Level-2" type="Button" parent="Panel/Control/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_81afr")
theme_override_font_sizes/font_size = 40
text = "2"

[node name="Level-3" type="Button" parent="Panel/Control/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_81afr")
theme_override_font_sizes/font_size = 40
text = "3"

[node name="Level-4" type="Button" parent="Panel/Control/GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_81afr")
theme_override_font_sizes/font_size = 40
text = "4"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.461
anchor_top = 0.1
anchor_right = 0.542
anchor_bottom = 0.148
offset_left = -0.0720215
offset_top = 0.199997
offset_right = -0.384033
offset_bottom = 0.0960007
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_81afr")
theme_override_font_sizes/font_size = 30
text = "Levels"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.464
anchor_top = 0.823
anchor_right = 0.531
anchor_bottom = 0.878
offset_left = -0.528015
offset_top = -0.304016
offset_right = 0.287964
offset_bottom = 3.05597
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_81afr")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_mo7wi")
theme_override_styles/hover = SubResource("StyleBoxFlat_mq0iq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ewv1")
theme_override_styles/normal = SubResource("StyleBoxFlat_rqkv6")
text = "Back
"
flat = true

[connection signal="pressed" from="Panel/Control/GridContainer/Level-1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Panel/Control/GridContainer/Level-2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Panel/Control/GridContainer/Level-3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Panel/Control/GridContainer/Level-4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
